--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
-  "name": "chatty-app",
+  "name": "client",
   "version": "1.0.0",
   "description": "Chatty-App using react",
+  "main": "index.js",
   "scripts": {
-    "lint": "eslint src",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brendonion/chatty-app"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "reload",
-    "live",
-    "edit",
-    "webpack"
-  ],
   "author": "Brendan Walker",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/brendonion/chatty-app"
-  },
-  "homepage": "https://github.com/brendonion/chatty-app",
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "6.10.4",
-    "babel-loader": "6.0.1",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.5.0",
-    "css-loader": "0.23.1",
-    "eslint": "2.7.0",
-    "eslint-plugin-react": "5.2.2",
-    "node-sass": "3.8.0",
-    "sass-loader": "4.0.0",
-    "sockjs-client": "^1.1.1",
-    "style-loader": "0.13.1",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
-  },
+  "license": "ISC",
   "dependencies": {
-    "react": "15.2.1",
-    "react-dom": "15.2.1"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "node-sass": "^4.5.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
   }
 }
